# os-x86-rust

./: .gitignore  Cargo.toml  Makefile  README.md  bochsrc  check_kernel_size.py  rust-toolchain.toml
.cargo/: config
doc/: index.md
os/: .gitignore  Cargo.toml  Makefile  bochsrc  build.rs  lldb_debug.txt  run.sh  rust-toolchain.toml  x86-unknown-bare-metal.json
os/src/: config.rs  console.rs  entry.asm  logger.rs  main.rs  timer.rs
os/src/boot/: loader.s  loader.s.bochs
os/src/drivers/: mod.rs  rtc.rs  screen.rs  tsc.rs
os/src/fs/: mod.rs  stdio.rs
os/src/intr/: context.rs  define.rs  mod.rs  pic.rs  trap.S
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  init.rs  memory_set.rs  mod.rs  page_table.rs  tss.rs
os/src/process/: context.rs  process.rs  task.rs
os/src/programs/: mod.rs
os/src/schedule/: manager.rs  mod.rs  processor.rs  switch.S
os/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs
os/src/syscall/: define.rs  io.rs  (+4 more)
src/: config.rs  console.rs  entry.asm  linker.ld  logger.rs  main.rs  timer.rs
src/boot/: loader.s  loader.s.qemu  mbr.s
src/driver/: screen.rs
src/drivers/: mod.rs  screen.rs
src/intr/: context.rs  define.rs  mod.rs  trap.S
src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  init.rs  memory_set.rs  mod.rs  page_table.rs  tss.rs
src/process/: context.rs  mod.rs  process.rs  task.rs
src/schedule/: mod.rs  processor.rs  switch.rs
src/utils/: id_allocator.rs  mod.rs
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld
(+27 files in other folders)
