[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_trace"] }
buddy_system_allocator = "0.6"
spin = "0.7.0"
